--- a/about.html
+++ b/about.html
@@ -3,18 +3,19 @@
     <title>My Web Page</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="main.css">       
 </head>
 <body>
     <header>
-        <h1>Welcome to My Web Page</h1>
-        <a href="about.html">About</a>
+        <h1>About Page</h1>
         <a href="index.html">Home</a>
+        <a href="about.html">About</a>
     </header>
     <main>
-        <p>This is a simple web page created as an example.</p>
+        <p>This is the about page of my web site.</p>
     </main>
     <footer>
         <p>&copy; 2023 My Web Page</p>
     </footer>
+</body>
 </html>
